@@ -90,6 +90,7 @@ let eq_string (i: string) (j: string) = (i = j);;
 let eq_nativeint (i: nativeint) (j: nativeint) = (i = j);;
 let eq_int32 (i: int32) (j: int32) = (i = j);;
 let eq_int64 (i: int64) (j: int64) = (i = j);;
+let eq_float (x: float) (y: float) = Pervasives.compare x y = 0;;
 
 let sixtyfour = (1 lsl 31) <> 0;;
 
